# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.4 2004/09/13 21:52:50 tseng Exp $

*evolution-data-server-0.0.99 (13 Sep 2004)

  13 Sep 2004; Brandon Hale <tseng@gentoo.org>
  +evolution-data-server-0.0.99.ebuild:
  Version bump, closes bug #62583

  29 Aug 2004; David Holm <dholm@gentoo.org>
  evolution-data-server-0.0.98.ebuild:
  Added to ~ppc.

*evolution-data-server-0.0.98 (24 Aug 2004)

  24 Aug 2004; Brandon Hale <tseng@gentoo.org>
  +evolution-data-server-0.0.98.ebuild:
  Version bump.

*evolution-data-server-0.0.97 (06 Aug 2004)

  06 Aug 2004; Alastair Tse <liquidx@gentoo.org>
  +evolution-data-server-0.0.97.ebuild:
  initial commit for evolution-data-server ebuild. based on ebuild submitted buy
  Joe McCann <joe@breakmygentoo.net> (#35456)
