@@ -1,8 +1,10 @@
-MD5 3254cb26998fda66daa34766bd51ab91 ChangeLog 918
 MD5 94e8f3ea940c36c5c7b8d81d82d9bc2f evolution-data-server-0.0.97.ebuild 949
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 eb98ba78403dc835e6173cf52a4bd822 evolution-data-server-0.0.98.ebuild 954
 MD5 ded9ab138e44bfbd68cc8ded47f4d701 evolution-data-server-0.0.99.ebuild 951
+MD5 006ee1751ae9c757ee80715a72048a26 evolution-data-server-1.0.0.ebuild 881
+MD5 eb98ba78403dc835e6173cf52a4bd822 evolution-data-server-0.0.98.ebuild 954
+MD5 3254cb26998fda66daa34766bd51ab91 ChangeLog 918
+MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 f327a312b24ef4297eb7d0a7084a0ad1 files/digest-evolution-data-server-0.0.97 82
 MD5 b4b079019d0e2b856b217a9247c290aa files/digest-evolution-data-server-0.0.98 82
 MD5 ef0486c1314d57b283d398f18cc84e0e files/digest-evolution-data-server-0.0.99 82
+MD5 3fd1c3fafa70f6f1d534749bfd1430cb files/digest-evolution-data-server-1.0.0 81
