@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.4 2004/09/13 21:52:50 tseng Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.5 2004/09/17 11:43:43 foser Exp $
+
+*evolution-data-server-1.0.0 (17 Sep 2004)
+
+  17 Sep 2004; foser <foser@gentoo.org> evolution-data-server-1.0.0.ebuild :
+  Gnome 2.8 release
 
 *evolution-data-server-0.0.99 (13 Sep 2004)
 
